# ModelForge

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
services/app-server/: pyproject.toml
services/app-server/alembic/: env.py
services/app-server/app/: ai_eval_defaults.py  api_key_auth.py  auth.py  authz.py  badcase_contracts.py  bootstrap.py  celery_client.py  config.py  db.py  main.py  migrate.py  modelserver_client.py  pagination.py  storage.py
services/app-server/db/: init.sql
services/app-server/scripts/: dump_schema.py  seed_badcase_demo.py
services/app-server/tests/: conftest.py  test_ai_eval.py  test_api_keys.py  test_auth.py  test_auth_api.py  test_authz.py  test_badcase_api.py  test_badcase_build_dataset.py  test_badcase_contracts.py  test_bootstrap.py  test_business_authz.py  test_created_by_columns.py  test_data_scope_validation.py  test_dataset_model.py  test_dataset_service.py  test_dataset_templates.py  test_datasets_api.py  test_datasets_authz.py  test_deployment_api.py  test_deployment_model.py  test_e2e_smoke.md  test_eval_api.py  test_evalrun_model.py  test_export.py  test_internal_token.py  test_llm_providers.py  test_migrate.py  test_migrations_apply.py  test_mlflow_sync.py  test_models_api.py  test_models_import.py  test_prompt_eval.py  test_prompts.py  test_rbac_models.py  test_roles_api.py  test_startup_migrate.py  test_stats.py  test_storage.py  test_training_api.py  test_training_model.py  (+1 more)
services/model-server/: pyproject.toml
services/train-worker/: pyproject.toml
services/train-worker/worker/: db.py  (+7 more)
(+234 files in other folders)
