[project]
name = "modelforge-app-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111", "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0", "psycopg[binary]>=3.1", "alembic>=1.13",
  "pydantic-settings>=2.2", "celery>=5.3", "redis>=5.0",
  "boto3>=1.34", "mlflow>=2.16", "pandas>=2.2", "pyarrow>=16.0",
  "modelforge-common",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.setuptools.packages.find]
include = ["app*"]
