[project]
name = "modelforge-train-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "celery>=5.3", "redis>=5.0", "sqlalchemy>=2.0", "psycopg[binary]>=3.1",
  "boto3>=1.34", "mlflow>=2.16", "pandas>=2.2", "pyarrow>=16.0",
  "transformers>=4.44,<5", "datasets>=2.20", "torch>=2.2",
  "scikit-learn>=1.5", "requests>=2.31", "modelforge-common",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["worker*"]
